use of axios, interceptors

--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,5 +1,5 @@
 .Post {
-    width: 100px;
+    width: 250px;
     padding: 16px;
     text-align: center;
     border: 1px solid #eee;
@@ -17,4 +17,5 @@
 .Author {
     margin: 16px 0;
     color: #ccc;
+    text-transform: uppercase;
 }
