--- a/src/containers/Blog/Blog.css
+++ b/src/containers/Blog/Blog.css
@@ -5,3 +5,14 @@
     width: 80%;
     margin: auto;
 }
+
+.Error {
+    text-align: center;
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: .75rem 1.25rem;
+    margin: 1rem 0;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
