--- a/src/containers/Blog/Blog.css
+++ b/src/containers/Blog/Blog.css
@@ -1,11 +1,3 @@
-.Posts {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    width: 80%;
-    margin: auto;
-}
-
 .Error {
     text-align: center;
     color: #721c24;
@@ -15,4 +7,28 @@
     margin: 1rem 0;
     border: 1px solid transparent;
     border-radius: .25rem;
+}
+
+.Blog ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+    background: #B0BEC5;
+}
+
+.Blog li {
+    display: inline-block;
+    margin: 20px;
+}
+
+.Blog a {
+    text-decoration: none;
+    color: black;
+}
+
+.Blog a:hover,
+.Blog a:active {
+    color: #fa923f;
 }
